--- a/Resume_scorer/Resume Scoring/scoring.ipynb
+++ b/Resume_scorer/Resume Scoring/scoring.ipynb
@@ -314,17 +314,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# doc = ner_model(resume)\n",
+    "doc = ner_model(resume)\n",
     "\n",
-    "# skill_list = [tok.text for tok in doc if tok.ent_type_==\"Skills\"]\n",
-    "# skill_text = \" \".join(skill_list)\n",
+    "skill_list = [tok.text for tok in doc if tok.ent_type_==\"Skills\"]\n",
+    "skill_text = \" \".join(skill_list)\n",
     "\n",
-    "# skill_score = 0\n",
+    "skill_score = 0\n",
     "\n",
-    "# if len(skill_list)>0:\n",
-    "#     skill_match = 90.0-documentSimilarity(jd,skill_text)\n",
-    "#     ## Skills are matched on a scale of 0-10\n",
-    "#     skill_score = min(10,skill_match)\n"
+    "if len(skill_list)>0:\n",
+    "    skill_match = 90.0-documentSimilarity(jd,skill_text)\n",
+    "    ## Skills are matched on a scale of 0-10\n",
+    "    skill_score = min(10,skill_match)\n"
    ]
   },
   {
